--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ethereumjs-tx": "^2.1.2",
     "js-sha256": "^0.9.0",
+    "sha256-file": "^1.0.0",
     "web3": "^1.3.0"
   },
   "devDependencies": {
