--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "author": "Zach Alam",
   "license": "Apache-2.0",
   "dependencies": {
-    "ethereumjs-tx": "^2.1.2",
-    "js-sha256": "^0.9.0",
-    "sha256-file": "^1.0.0",
-    "web3": "^1.3.0"
+    "ethereumjs-tx": "2.1.2",
+    "js-sha256": "0.9.0",
+    "sha256-file": "1.0.0",
+    "web3": "1.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
