--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "author": "Zach Alam",
   "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^4.1.0",
+    "chalk": "4.1.0",
+    "commander": "6.2.0",
     "ethereumjs-tx": "2.1.2",
     "js-sha256": "0.9.0",
+    "prompts": "2.4.0",
     "sha256-file": "1.0.0",
     "web3": "1.3.0"
   },
