--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitfact",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A Javascript library to fingerprint (prove) your data, text, & files on the Ethereum blockchain.",
   "main": "BitFact.js",
   "bin": {
@@ -25,6 +25,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "chalk": "4.1.0",
+    "cli-spinner": "^0.2.10",
     "commander": "6.2.0",
     "ethereumjs-tx": "2.1.2",
     "js-sha256": "0.9.0",
